@@ -5,28 +5,33 @@
  */
 package org.elasticsearch.xpack.ccr.action;
 
+import com.carrotsearch.hppc.cursors.ObjectObjectCursor;
 import org.elasticsearch.Version;
 import org.elasticsearch.action.admin.cluster.state.ClusterStateResponse;
+import org.elasticsearch.action.support.replication.ClusterStateCreationUtils;
 import org.elasticsearch.client.Client;
 import org.elasticsearch.cluster.ClusterName;
 import org.elasticsearch.cluster.ClusterState;
-import org.elasticsearch.cluster.metadata.IndexMetaData;
-import org.elasticsearch.cluster.metadata.MetaData;
+import org.elasticsearch.cluster.metadata.IndexMetadata;
+import org.elasticsearch.cluster.metadata.Metadata;
 import org.elasticsearch.cluster.routing.IndexRoutingTable;
 import org.elasticsearch.cluster.routing.RoutingTable;
 import org.elasticsearch.cluster.routing.ShardRouting;
 import org.elasticsearch.cluster.routing.ShardRoutingState;
 import org.elasticsearch.cluster.routing.TestShardRouting;
 import org.elasticsearch.cluster.service.ClusterService;
+import org.elasticsearch.common.UUIDs;
 import org.elasticsearch.common.collect.Tuple;
 import org.elasticsearch.common.settings.ClusterSettings;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.unit.ByteSizeValue;
 import org.elasticsearch.common.unit.TimeValue;
+import org.elasticsearch.common.util.concurrent.ConcurrentCollections;
 import org.elasticsearch.common.util.concurrent.EsRejectedExecutionException;
 import org.elasticsearch.index.Index;
 import org.elasticsearch.index.IndexSettings;
 import org.elasticsearch.test.ESTestCase;
+import org.elasticsearch.test.VersionUtils;
 import org.elasticsearch.xpack.ccr.Ccr;
 import org.elasticsearch.xpack.ccr.CcrLicenseChecker;
 import org.elasticsearch.xpack.ccr.CcrSettings;
@@ -34,6 +39,8 @@ import org.elasticsearch.xpack.ccr.action.AutoFollowCoordinator.AutoFollower;
 import org.elasticsearch.xpack.core.ccr.AutoFollowMetadata;
 import org.elasticsearch.xpack.core.ccr.AutoFollowMetadata.AutoFollowPattern;
 import org.elasticsearch.xpack.core.ccr.AutoFollowStats;
+import org.elasticsearch.xpack.core.ccr.action.ActivateAutoFollowPatternAction;
+import org.elasticsearch.xpack.core.ccr.action.PutAutoFollowPatternAction;
 import org.elasticsearch.xpack.core.ccr.action.PutFollowAction;
 
 import java.util.ArrayList;
@@ -44,23 +51,33 @@ import java.util.HashMap;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
+import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.BiConsumer;
 import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.function.Supplier;
 
+import static java.util.Collections.emptyMap;
+import static java.util.Collections.singletonList;
+import static java.util.Collections.singletonMap;
 import static org.elasticsearch.xpack.ccr.action.AutoFollowCoordinator.AutoFollower.cleanFollowedRemoteIndices;
 import static org.elasticsearch.xpack.ccr.action.AutoFollowCoordinator.AutoFollower.recordLeaderIndexAsFollowFunction;
+import static org.hamcrest.Matchers.containsInAnyOrder;
+import static org.hamcrest.Matchers.empty;
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.greaterThan;
+import static org.hamcrest.Matchers.hasItem;
 import static org.hamcrest.Matchers.is;
 import static org.hamcrest.Matchers.notNullValue;
 import static org.hamcrest.Matchers.nullValue;
 import static org.hamcrest.Matchers.sameInstance;
+import static org.hamcrest.Matchers.startsWith;
 import static org.mockito.Matchers.anyString;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
@@ -74,17 +91,17 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
         ClusterState remoteState = createRemoteClusterState("logs-20190101", true);
 
         AutoFollowPattern autoFollowPattern = new AutoFollowPattern("remote", Collections.singletonList("logs-*"),
-            null, null, null, null, null, null, null, null, null, null, null);
+            null, true, null, null, null, null, null, null, null, null, null, null);
         Map<String, AutoFollowPattern> patterns = new HashMap<>();
         patterns.put("remote", autoFollowPattern);
         Map<String, List<String>> followedLeaderIndexUUIDS = new HashMap<>();
         followedLeaderIndexUUIDS.put("remote", new ArrayList<>());
         Map<String, Map<String, String>> autoFollowHeaders = new HashMap<>();
-        autoFollowHeaders.put("remote", Collections.singletonMap("key", "val"));
+        autoFollowHeaders.put("remote", Map.of("key", "val"));
         AutoFollowMetadata autoFollowMetadata = new AutoFollowMetadata(patterns, followedLeaderIndexUUIDS, autoFollowHeaders);
 
         ClusterState currentState = ClusterState.builder(new ClusterName("name"))
-            .metaData(MetaData.builder().putCustom(AutoFollowMetadata.TYPE, autoFollowMetadata))
+            .metadata(Metadata.builder().putCustom(AutoFollowMetadata.TYPE, autoFollowMetadata))
             .build();
 
         boolean[] invoked = new boolean[]{false};
@@ -123,7 +140,7 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
             void updateAutoFollowMetadata(Function<ClusterState, ClusterState> updateFunction,
                                           Consumer<Exception> handler) {
                 ClusterState resultCs = updateFunction.apply(currentState);
-                AutoFollowMetadata result = resultCs.metaData().custom(AutoFollowMetadata.TYPE);
+                AutoFollowMetadata result = resultCs.metadata().custom(AutoFollowMetadata.TYPE);
                 assertThat(result.getFollowedLeaderIndexUUIDs().size(), equalTo(1));
                 assertThat(result.getFollowedLeaderIndexUUIDs().get("remote").size(), equalTo(1));
                 handler.accept(null);
@@ -143,7 +160,7 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
         when(client.getRemoteClusterClient(anyString())).thenReturn(client);
 
         AutoFollowPattern autoFollowPattern = new AutoFollowPattern("remote", Collections.singletonList("logs-*"),
-                null, null, null, null, null, null, null, null, null, null, null);
+                null, true, null, null, null, null, null, null, null, null, null, null);
         Map<String, AutoFollowPattern> patterns = new HashMap<>();
         patterns.put("remote", autoFollowPattern);
         Map<String, List<String>> followedLeaderIndexUUIDS = new HashMap<>();
@@ -151,7 +168,7 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
         Map<String, Map<String, String>> headers = new HashMap<>();
         AutoFollowMetadata autoFollowMetadata = new AutoFollowMetadata(patterns, followedLeaderIndexUUIDS, headers);
         ClusterState clusterState = ClusterState.builder(new ClusterName("remote"))
-            .metaData(MetaData.builder().putCustom(AutoFollowMetadata.TYPE, autoFollowMetadata))
+            .metadata(Metadata.builder().putCustom(AutoFollowMetadata.TYPE, autoFollowMetadata))
             .build();
 
         Exception failure = new RuntimeException("failure");
@@ -195,7 +212,7 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
         ClusterState remoteState = createRemoteClusterState("logs-20190101", true);
 
         AutoFollowPattern autoFollowPattern = new AutoFollowPattern("remote", Collections.singletonList("logs-*"),
-                null, null, null, null, null, null, null, null, null, null, null);
+                null, true, null, null, null, null, null, null, null, null, null, null);
         Map<String, AutoFollowPattern> patterns = new HashMap<>();
         patterns.put("remote", autoFollowPattern);
         Map<String, List<String>> followedLeaderIndexUUIDS = new HashMap<>();
@@ -203,7 +220,7 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
         Map<String, Map<String, String>> headers = new HashMap<>();
         AutoFollowMetadata autoFollowMetadata = new AutoFollowMetadata(patterns, followedLeaderIndexUUIDS, headers);
         ClusterState clusterState = ClusterState.builder(new ClusterName("remote"))
-            .metaData(MetaData.builder().putCustom(AutoFollowMetadata.TYPE, autoFollowMetadata))
+            .metadata(Metadata.builder().putCustom(AutoFollowMetadata.TYPE, autoFollowMetadata))
             .build();
 
         Exception failure = new RuntimeException("failure");
@@ -246,13 +263,232 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
         assertThat(invoked[0], is(true));
     }
 
+    public void testAutoFollowerWithNoActivePatternsDoesNotStart() {
+        final String remoteCluster = randomAlphaOfLength(5);
+
+        final Map<String, AutoFollowPattern> autoFollowPatterns = new HashMap<>(2);
+        autoFollowPatterns.put("pattern_1", new AutoFollowPattern(remoteCluster, List.of("logs-*", "test-*"), "copy-", false, null, null,
+            null, null, null, null, null, null, null, null));
+        autoFollowPatterns.put("pattern_2", new AutoFollowPattern(remoteCluster, List.of("users-*"), "copy-", false, null, null,
+            null, null, null, null, null, null, null, null));
+
+        final Map<String, List<String>> followedLeaderIndexUUIDs = new HashMap<>(2);
+        followedLeaderIndexUUIDs.put("pattern_1", List.of("uuid1", "uuid2"));
+        followedLeaderIndexUUIDs.put("pattern_2", Collections.emptyList());
+
+        final Map<String, Map<String, String>> headers = new HashMap<>(2);
+        headers.put("pattern_1", singletonMap("header", "value"));
+        headers.put("pattern_2", emptyMap());
+
+        final Supplier<ClusterState> followerClusterStateSupplier = localClusterStateSupplier(ClusterState.builder(new ClusterName("test"))
+            .metadata(Metadata.builder()
+                .putCustom(AutoFollowMetadata.TYPE, new AutoFollowMetadata(autoFollowPatterns, followedLeaderIndexUUIDs, headers))
+                .build())
+            .build());
+
+        final AtomicBoolean invoked = new AtomicBoolean(false);
+        final AutoFollower autoFollower =
+            new AutoFollower(remoteCluster, v -> invoked.set(true), followerClusterStateSupplier, () -> 1L, Runnable::run) {
+                @Override
+                void getRemoteClusterState(String remote, long metadataVersion, BiConsumer<ClusterStateResponse, Exception> handler) {
+                    invoked.set(true);
+                }
+
+                @Override
+                void createAndFollow(Map<String, String> headers, PutFollowAction.Request request,
+                                     Runnable successHandler, Consumer<Exception> failureHandler) {
+                    invoked.set(true);
+                    successHandler.run();
+                }
+
+                @Override
+                void updateAutoFollowMetadata(Function<ClusterState, ClusterState> updateFunction, Consumer<Exception> handler) {
+                    invoked.set(true);
+                }
+            };
+
+        autoFollower.start();
+        assertThat(invoked.get(), is(false));
+    }
+
+    public void testAutoFollowerWithPausedActivePatterns() {
+        final String remoteCluster = randomAlphaOfLength(5);
+
+        final AtomicReference<ClusterState> remoteClusterState = new AtomicReference<>(
+            createRemoteClusterState("patternLogs-0", true, randomLongBetween(1L, 1_000L))
+        );
+
+        final AtomicReference<ClusterState> localClusterState = new AtomicReference<>(
+            ClusterState.builder(new ClusterName("local"))
+                .metadata(Metadata.builder()
+                    .putCustom(AutoFollowMetadata.TYPE, new AutoFollowMetadata(emptyMap(), emptyMap(), emptyMap())))
+                .build()
+        );
+
+        // compute and return the local cluster state, updated with some auto-follow patterns
+        final Supplier<ClusterState> localClusterStateSupplier = () -> localClusterState.updateAndGet(currentLocalState -> {
+            final int nextClusterStateVersion = (int) (currentLocalState.version() + 1);
+
+            final ClusterState nextLocalClusterState;
+            if (nextClusterStateVersion == 1) {
+                // cluster state #1 : one pattern is active
+                PutAutoFollowPatternAction.Request request = new PutAutoFollowPatternAction.Request();
+                request.setName("patternLogs");
+                request.setRemoteCluster(remoteCluster);
+                request.setLeaderIndexPatterns(singletonList("patternLogs-*"));
+                request.setFollowIndexNamePattern("copy-{{leader_index}}");
+                nextLocalClusterState =
+                    TransportPutAutoFollowPatternAction.innerPut(request, emptyMap(), currentLocalState, remoteClusterState.get());
+
+            } else if (nextClusterStateVersion == 2) {
+                // cluster state #2 : still one pattern is active
+                nextLocalClusterState = currentLocalState;
+
+            } else if (nextClusterStateVersion == 3) {
+                // cluster state #3 : add a new pattern, two patterns are active
+                PutAutoFollowPatternAction.Request request = new PutAutoFollowPatternAction.Request();
+                request.setName("patternDocs");
+                request.setRemoteCluster(remoteCluster);
+                request.setLeaderIndexPatterns(singletonList("patternDocs-*"));
+                request.setFollowIndexNamePattern("copy-{{leader_index}}");
+                nextLocalClusterState =
+                    TransportPutAutoFollowPatternAction.innerPut(request, emptyMap(), currentLocalState, remoteClusterState.get());
+
+            } else if (nextClusterStateVersion == 4) {
+                // cluster state #4 : still both patterns are active
+                nextLocalClusterState = currentLocalState;
+
+            } else if (nextClusterStateVersion == 5) {
+                // cluster state #5 : first pattern is paused, second pattern is still active
+                ActivateAutoFollowPatternAction.Request request = new ActivateAutoFollowPatternAction.Request("patternLogs", false);
+                nextLocalClusterState = TransportActivateAutoFollowPatternAction.innerActivate(request, currentLocalState);
+
+            } else if (nextClusterStateVersion == 6) {
+                // cluster state #5 : second pattern is paused, both patterns are inactive
+                ActivateAutoFollowPatternAction.Request request = new ActivateAutoFollowPatternAction.Request("patternDocs", false);
+                nextLocalClusterState = TransportActivateAutoFollowPatternAction.innerActivate(request, currentLocalState);
+
+            } else {
+                return currentLocalState;
+            }
+
+            return ClusterState.builder(nextLocalClusterState)
+                .version(nextClusterStateVersion)
+                .build();
+        });
+
+        final Set<String> followedIndices = ConcurrentCollections.newConcurrentSet();
+        final List<AutoFollowCoordinator.AutoFollowResult> autoFollowResults = new ArrayList<>();
+
+        final AutoFollower autoFollower =
+            new AutoFollower(remoteCluster, autoFollowResults::addAll, localClusterStateSupplier, () -> 1L, Runnable::run) {
+
+                int countFetches = 1; // to be aligned with local cluster state updates
+                ClusterState lastFetchedRemoteClusterState;
+
+                @Override
+                void getRemoteClusterState(String remote, long metadataVersion, BiConsumer<ClusterStateResponse, Exception> handler) {
+                    assertThat(remote, equalTo(remoteCluster));
+
+                    // in this test, every time it fetches the remote cluster state new leader indices to follow appears
+                    final String[] newLeaderIndices = {"patternLogs-" + countFetches, "patternDocs-" + countFetches};
+
+                    if (countFetches == 1) {
+                        assertThat("first invocation, it should retrieve the metadata version 1", metadataVersion, equalTo(1L));
+                        lastFetchedRemoteClusterState = createRemoteClusterState(remoteClusterState.get(), newLeaderIndices);
+
+                    } else if (countFetches == 2 || countFetches == 4) {
+                        assertThat("no patterns changes, it should retrieve the last known metadata version + 1",
+                            metadataVersion, equalTo(lastFetchedRemoteClusterState.metadata().version() + 1));
+                        lastFetchedRemoteClusterState = createRemoteClusterState(remoteClusterState.get(), newLeaderIndices);
+                        assertThat("remote cluster state metadata version is aligned with what the auto-follower is requesting",
+                            lastFetchedRemoteClusterState.getMetadata().version(), equalTo(metadataVersion));
+
+                    } else if (countFetches == 3 || countFetches == 5) {
+                        assertThat("patterns have changed, it should retrieve the last known metadata version again",
+                            metadataVersion, equalTo(lastFetchedRemoteClusterState.metadata().version()));
+                        lastFetchedRemoteClusterState = createRemoteClusterState(remoteClusterState.get(), newLeaderIndices);
+                        assertThat("remote cluster state metadata version is incremented",
+                            lastFetchedRemoteClusterState.getMetadata().version(), equalTo(metadataVersion + 1));
+                    } else {
+                        fail("after the 5th invocation there are no more active patterns, the auto-follower should have stopped");
+                    }
+
+                    countFetches = countFetches + 1;
+                    remoteClusterState.set(lastFetchedRemoteClusterState);
+                    handler.accept(new ClusterStateResponse(lastFetchedRemoteClusterState.getClusterName(),
+                        lastFetchedRemoteClusterState, false), null);
+                }
+
+                @Override
+                void createAndFollow(Map<String, String> headers, PutFollowAction.Request request,
+                                     Runnable successHandler, Consumer<Exception> failureHandler) {
+                    assertThat(request.getRemoteCluster(), equalTo(remoteCluster));
+                    assertThat(request.getFollowerIndex(), startsWith("copy-"));
+                    followedIndices.add(request.getLeaderIndex());
+                    successHandler.run();
+                }
+
+                @Override
+                void updateAutoFollowMetadata(Function<ClusterState, ClusterState> updateFunction, Consumer<Exception> handler) {
+                    localClusterState.updateAndGet(updateFunction::apply);
+                    handler.accept(null);
+                }
+
+                @Override
+                void cleanFollowedRemoteIndices(ClusterState remoteClusterState, List<String> patterns) {
+                    // Ignore, to avoid invoking updateAutoFollowMetadata(...) twice
+                }
+            };
+
+        autoFollower.start();
+
+        assertThat(autoFollowResults.size(), equalTo(7));
+        assertThat(followedIndices, containsInAnyOrder(
+            "patternLogs-1", // iteration #1 : only pattern "patternLogs" is active in local cluster state
+            "patternLogs-2", // iteration #2 : only pattern "patternLogs" is active in local cluster state
+            "patternLogs-3", // iteration #3 : both patterns "patternLogs" and "patternDocs" are active in local cluster state
+            "patternDocs-3", //
+            "patternLogs-4", // iteration #4 : both patterns "patternLogs" and "patternDocs" are active in local cluster state
+            "patternDocs-4", //
+            "patternDocs-5"  // iteration #5 : only pattern "patternDocs" is active in local cluster state, "patternLogs" is paused
+        ));
+
+        final ClusterState finalRemoteClusterState = remoteClusterState.get();
+        final ClusterState finalLocalClusterState = localClusterState.get();
+
+        AutoFollowMetadata autoFollowMetadata = finalLocalClusterState.metadata().custom(AutoFollowMetadata.TYPE);
+        assertThat(autoFollowMetadata.getPatterns().size(), equalTo(2));
+        assertThat(autoFollowMetadata.getPatterns().values().stream().noneMatch(AutoFollowPattern::isActive), is(true));
+
+        assertThat(autoFollowMetadata.getFollowedLeaderIndexUUIDs().get("patternLogs"),
+            containsInAnyOrder(
+                finalRemoteClusterState.metadata().index("patternLogs-0").getIndexUUID(),
+                finalRemoteClusterState.metadata().index("patternLogs-1").getIndexUUID(),
+                finalRemoteClusterState.metadata().index("patternLogs-2").getIndexUUID(),
+                finalRemoteClusterState.metadata().index("patternLogs-3").getIndexUUID(),
+                finalRemoteClusterState.metadata().index("patternLogs-4").getIndexUUID()
+                // patternLogs-5 exists in remote cluster state but patternLogs was paused
+            ));
+
+        assertThat(autoFollowMetadata.getFollowedLeaderIndexUUIDs().get("patternDocs"),
+            containsInAnyOrder(
+                // patternDocs-0 does not exist in remote cluster state
+                finalRemoteClusterState.metadata().index("patternDocs-1").getIndexUUID(),
+                finalRemoteClusterState.metadata().index("patternDocs-2").getIndexUUID(),
+                finalRemoteClusterState.metadata().index("patternDocs-3").getIndexUUID(),
+                finalRemoteClusterState.metadata().index("patternDocs-4").getIndexUUID(),
+                finalRemoteClusterState.metadata().index("patternDocs-5").getIndexUUID()
+            ));
+    }
+
     public void testAutoFollowerCreateAndFollowApiCallFailure() {
         Client client = mock(Client.class);
         when(client.getRemoteClusterClient(anyString())).thenReturn(client);
         ClusterState remoteState = createRemoteClusterState("logs-20190101", true);
 
         AutoFollowPattern autoFollowPattern = new AutoFollowPattern("remote", Collections.singletonList("logs-*"),
-                null, null, null, null, null, null, null, null, null, null, null);
+                null, true, null, null, null, null, null, null, null, null, null, null);
         Map<String, AutoFollowPattern> patterns = new HashMap<>();
         patterns.put("remote", autoFollowPattern);
         Map<String, List<String>> followedLeaderIndexUUIDS = new HashMap<>();
@@ -260,7 +496,7 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
         Map<String, Map<String, String>> headers = new HashMap<>();
         AutoFollowMetadata autoFollowMetadata = new AutoFollowMetadata(patterns, followedLeaderIndexUUIDS, headers);
         ClusterState clusterState = ClusterState.builder(new ClusterName("remote"))
-            .metaData(MetaData.builder().putCustom(AutoFollowMetadata.TYPE, autoFollowMetadata))
+            .metadata(Metadata.builder().putCustom(AutoFollowMetadata.TYPE, autoFollowMetadata))
             .build();
 
         Exception failure = new RuntimeException("failure");
@@ -310,22 +546,17 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
     }
 
     public void testGetLeaderIndicesToFollow() {
-        AutoFollowPattern autoFollowPattern = new AutoFollowPattern("remote", Collections.singletonList("metrics-*"),
-            null, null, null, null, null, null, null, null, null, null, null);
-        Map<String, Map<String, String>> headers = new HashMap<>();
-        ClusterState clusterState = ClusterState.builder(new ClusterName("remote"))
-            .metaData(MetaData.builder().putCustom(AutoFollowMetadata.TYPE,
-                new AutoFollowMetadata(Collections.singletonMap("remote", autoFollowPattern), Collections.emptyMap(), headers)))
-            .build();
+        final AutoFollowPattern autoFollowPattern = new AutoFollowPattern("remote", Collections.singletonList("metrics-*"), null, true,
+            null, null, null, null, null, null, null, null, null, null);
 
         RoutingTable.Builder routingTableBuilder = RoutingTable.builder();
-        MetaData.Builder imdBuilder = MetaData.builder();
+        Metadata.Builder imdBuilder = Metadata.builder();
         for (int i = 0; i < 5; i++) {
             String indexName = "metrics-" + i;
             Settings.Builder builder = Settings.builder()
-                .put(IndexMetaData.SETTING_VERSION_CREATED, Version.CURRENT)
-                .put(IndexMetaData.SETTING_INDEX_UUID, indexName);
-            imdBuilder.put(IndexMetaData.builder("metrics-" + i)
+                .put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT)
+                .put(IndexMetadata.SETTING_INDEX_UUID, indexName);
+            imdBuilder.put(IndexMetadata.builder("metrics-" + i)
                 .settings(builder)
                 .numberOfShards(1)
                 .numberOfReplicas(0));
@@ -338,7 +569,7 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
             routingTableBuilder.add(indexRoutingTable);
         }
 
-        imdBuilder.put(IndexMetaData.builder("logs-0")
+        imdBuilder.put(IndexMetadata.builder("logs-0")
             .settings(settings(Version.CURRENT))
             .numberOfShards(1)
             .numberOfReplicas(0));
@@ -348,7 +579,7 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
         routingTableBuilder.add(indexRoutingTable);
 
         ClusterState remoteState = ClusterState.builder(new ClusterName("remote"))
-            .metaData(imdBuilder)
+            .metadata(imdBuilder)
             .routingTable(routingTableBuilder.build())
             .build();
 
@@ -361,7 +592,7 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
         assertThat(result.get(3).getName(), equalTo("metrics-3"));
         assertThat(result.get(4).getName(), equalTo("metrics-4"));
 
-        List<String> followedIndexUUIDs = Collections.singletonList(remoteState.metaData().index("metrics-2").getIndexUUID());
+        final List<String> followedIndexUUIDs = Collections.singletonList(remoteState.metadata().index("metrics-2").getIndexUUID());
         result = AutoFollower.getLeaderIndicesToFollow(autoFollowPattern, remoteState, followedIndexUUIDs);
         result.sort(Comparator.comparing(Index::getName));
         assertThat(result.size(), equalTo(4));
@@ -369,22 +600,26 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
         assertThat(result.get(1).getName(), equalTo("metrics-1"));
         assertThat(result.get(2).getName(), equalTo("metrics-3"));
         assertThat(result.get(3).getName(), equalTo("metrics-4"));
+
+        final AutoFollowPattern inactiveAutoFollowPattern = new AutoFollowPattern("remote", Collections.singletonList("metrics-*"), null,
+            false, null, null, null, null, null, null, null, null, null, null);
+
+        result = AutoFollower.getLeaderIndicesToFollow(inactiveAutoFollowPattern, remoteState, Collections.emptyList());
+        assertThat(result.size(), equalTo(0));
+
+        result = AutoFollower.getLeaderIndicesToFollow(inactiveAutoFollowPattern, remoteState, followedIndexUUIDs);
+        assertThat(result.size(), equalTo(0));
     }
 
     public void testGetLeaderIndicesToFollow_shardsNotStarted() {
         AutoFollowPattern autoFollowPattern = new AutoFollowPattern("remote", Collections.singletonList("*"),
-            null, null, null, null, null, null, null, null, null, null, null);
-        Map<String, Map<String, String>> headers = new HashMap<>();
-        ClusterState clusterState = ClusterState.builder(new ClusterName("remote"))
-            .metaData(MetaData.builder().putCustom(AutoFollowMetadata.TYPE,
-                new AutoFollowMetadata(Collections.singletonMap("remote", autoFollowPattern), Collections.emptyMap(), headers)))
-            .build();
+            null, true, null, null, null, null, null, null, null, null, null, null);
 
         // 1 shard started and another not started:
         ClusterState remoteState = createRemoteClusterState("index1", true);
-        MetaData.Builder mBuilder= MetaData.builder(remoteState.metaData());
-        mBuilder.put(IndexMetaData.builder("index2")
-            .settings(settings(Version.CURRENT).put(IndexSettings.INDEX_SOFT_DELETES_SETTING.getKey(), true))
+        Metadata.Builder mBuilder= Metadata.builder(remoteState.metadata());
+        mBuilder.put(IndexMetadata.builder("index2")
+            .settings(settings(Version.CURRENT))
             .numberOfShards(1)
             .numberOfReplicas(0));
         ShardRouting shardRouting =
@@ -392,7 +627,7 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
         IndexRoutingTable indexRoutingTable = IndexRoutingTable.builder(mBuilder.get("index2").getIndex()
         ).addShard(shardRouting).build();
         remoteState = ClusterState.builder(remoteState.getClusterName())
-            .metaData(mBuilder)
+            .metadata(mBuilder)
             .routingTable(RoutingTable.builder(remoteState.routingTable()).add(indexRoutingTable).build())
             .build();
 
@@ -402,10 +637,10 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
 
         // Start second shard:
         shardRouting = shardRouting.moveToStarted();
-        indexRoutingTable = IndexRoutingTable.builder(remoteState.metaData().indices().get("index2").getIndex())
+        indexRoutingTable = IndexRoutingTable.builder(remoteState.metadata().indices().get("index2").getIndex())
             .addShard(shardRouting).build();
         remoteState = ClusterState.builder(remoteState.getClusterName())
-            .metaData(remoteState.metaData())
+            .metadata(remoteState.metadata())
             .routingTable(RoutingTable.builder(remoteState.routingTable()).add(indexRoutingTable).build())
             .build();
 
@@ -416,16 +651,36 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
         assertThat(result.get(1).getName(), equalTo("index2"));
     }
 
+    public void testGetLeaderIndicesToFollowWithClosedIndices() {
+        final AutoFollowPattern autoFollowPattern = new AutoFollowPattern("remote", Collections.singletonList("*"),
+            null, true, null, null, null, null, null, null, null, null, null, null);
+
+        // index is opened
+        ClusterState remoteState = ClusterStateCreationUtils.stateWithActivePrimary("test-index", true, randomIntBetween(1, 3), 0);
+        List<Index> result = AutoFollower.getLeaderIndicesToFollow(autoFollowPattern, remoteState, Collections.emptyList());
+        assertThat(result.size(), equalTo(1));
+        assertThat(result, hasItem(remoteState.metadata().index("test-index").getIndex()));
+
+        // index is closed
+        remoteState = ClusterState.builder(remoteState)
+            .metadata(Metadata.builder(remoteState.metadata())
+                .put(IndexMetadata.builder(remoteState.metadata().index("test-index")).state(IndexMetadata.State.CLOSE).build(), true)
+                .build())
+            .build();
+        result = AutoFollower.getLeaderIndicesToFollow(autoFollowPattern, remoteState, Collections.emptyList());
+        assertThat(result.size(), equalTo(0));
+    }
+
     public void testRecordLeaderIndexAsFollowFunction() {
         AutoFollowMetadata autoFollowMetadata = new AutoFollowMetadata(Collections.emptyMap(),
-            Collections.singletonMap("pattern1", Collections.emptyList()), Collections.emptyMap());
+            Map.of("pattern1", Collections.emptyList()), Collections.emptyMap());
         ClusterState clusterState = new ClusterState.Builder(new ClusterName("name"))
-            .metaData(new MetaData.Builder().putCustom(AutoFollowMetadata.TYPE, autoFollowMetadata))
+            .metadata(new Metadata.Builder().putCustom(AutoFollowMetadata.TYPE, autoFollowMetadata))
             .build();
         Function<ClusterState, ClusterState> function = recordLeaderIndexAsFollowFunction("pattern1", new Index("index1", "index1"));
 
         ClusterState result = function.apply(clusterState);
-        AutoFollowMetadata autoFollowMetadataResult = result.metaData().custom(AutoFollowMetadata.TYPE);
+        AutoFollowMetadata autoFollowMetadataResult = result.metadata().custom(AutoFollowMetadata.TYPE);
         assertThat(autoFollowMetadataResult.getFollowedLeaderIndexUUIDs().get("pattern1"), notNullValue());
         assertThat(autoFollowMetadataResult.getFollowedLeaderIndexUUIDs().get("pattern1").size(), equalTo(1));
         assertThat(autoFollowMetadataResult.getFollowedLeaderIndexUUIDs().get("pattern1").get(0), equalTo("index1"));
@@ -435,7 +690,7 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
         AutoFollowMetadata autoFollowMetadata = new AutoFollowMetadata(Collections.emptyMap(), Collections.emptyMap(),
             Collections.emptyMap());
         ClusterState clusterState = new ClusterState.Builder(new ClusterName("name"))
-            .metaData(new MetaData.Builder().putCustom(AutoFollowMetadata.TYPE, autoFollowMetadata))
+            .metadata(new Metadata.Builder().putCustom(AutoFollowMetadata.TYPE, autoFollowMetadata))
             .build();
         Function<ClusterState, ClusterState> function = recordLeaderIndexAsFollowFunction("pattern1", new Index("index1", "index1"));
 
@@ -445,28 +700,26 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
 
     public void testCleanFollowedLeaderIndices() {
         AutoFollowMetadata autoFollowMetadata = new AutoFollowMetadata(Collections.emptyMap(),
-            Collections.singletonMap("pattern1", Arrays.asList("index1", "index2", "index3")), Collections.emptyMap());
+            Map.of("pattern1", Arrays.asList("index1", "index2", "index3")), Collections.emptyMap());
         ClusterState clusterState = new ClusterState.Builder(new ClusterName("name"))
-            .metaData(new MetaData.Builder().putCustom(AutoFollowMetadata.TYPE, autoFollowMetadata))
+            .metadata(new Metadata.Builder().putCustom(AutoFollowMetadata.TYPE, autoFollowMetadata))
             .build();
 
-        MetaData remoteMetadata = new MetaData.Builder()
-            .put(IndexMetaData.builder("index1")
+        Metadata remoteMetadata = new Metadata.Builder()
+            .put(IndexMetadata.builder("index1")
                 .settings(settings(Version.CURRENT)
-                    .put(IndexSettings.INDEX_SOFT_DELETES_SETTING.getKey(), true)
-                    .put(IndexMetaData.SETTING_INDEX_UUID, "index1"))
+                    .put(IndexMetadata.SETTING_INDEX_UUID, "index1"))
                 .numberOfShards(1)
                 .numberOfReplicas(0))
-            .put(IndexMetaData.builder("index3")
+            .put(IndexMetadata.builder("index3")
                 .settings(settings(Version.CURRENT)
-                    .put(IndexSettings.INDEX_SOFT_DELETES_SETTING.getKey(), true)
-                    .put(IndexMetaData.SETTING_INDEX_UUID, "index3"))
+                    .put(IndexMetadata.SETTING_INDEX_UUID, "index3"))
                 .numberOfShards(1)
                 .numberOfReplicas(0))
             .build();
 
         Function<ClusterState, ClusterState> function = cleanFollowedRemoteIndices(remoteMetadata, Collections.singletonList("pattern1"));
-        AutoFollowMetadata result = function.apply(clusterState).metaData().custom(AutoFollowMetadata.TYPE);
+        AutoFollowMetadata result = function.apply(clusterState).metadata().custom(AutoFollowMetadata.TYPE);
         assertThat(result.getFollowedLeaderIndexUUIDs().get("pattern1").size(), equalTo(2));
         assertThat(result.getFollowedLeaderIndexUUIDs().get("pattern1").get(0), equalTo("index1"));
         assertThat(result.getFollowedLeaderIndexUUIDs().get("pattern1").get(1), equalTo("index3"));
@@ -474,28 +727,25 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
 
     public void testCleanFollowedLeaderIndicesNoChanges() {
         AutoFollowMetadata autoFollowMetadata = new AutoFollowMetadata(Collections.emptyMap(),
-            Collections.singletonMap("pattern1", Arrays.asList("index1", "index2", "index3")), Collections.emptyMap());
+            Map.of("pattern1", Arrays.asList("index1", "index2", "index3")), Collections.emptyMap());
         ClusterState clusterState = new ClusterState.Builder(new ClusterName("name"))
-            .metaData(new MetaData.Builder().putCustom(AutoFollowMetadata.TYPE, autoFollowMetadata))
+            .metadata(new Metadata.Builder().putCustom(AutoFollowMetadata.TYPE, autoFollowMetadata))
             .build();
 
-        MetaData remoteMetadata = new MetaData.Builder()
-            .put(IndexMetaData.builder("index1")
+        Metadata remoteMetadata = new Metadata.Builder()
+            .put(IndexMetadata.builder("index1")
                 .settings(settings(Version.CURRENT)
-                    .put(IndexSettings.INDEX_SOFT_DELETES_SETTING.getKey(), true)
-                    .put(IndexMetaData.SETTING_INDEX_UUID, "index1"))
+                    .put(IndexMetadata.SETTING_INDEX_UUID, "index1"))
                 .numberOfShards(1)
                 .numberOfReplicas(0))
-            .put(IndexMetaData.builder("index2")
+            .put(IndexMetadata.builder("index2")
                 .settings(settings(Version.CURRENT)
-                    .put(IndexSettings.INDEX_SOFT_DELETES_SETTING.getKey(), true)
-                    .put(IndexMetaData.SETTING_INDEX_UUID, "index2"))
+                    .put(IndexMetadata.SETTING_INDEX_UUID, "index2"))
                 .numberOfShards(1)
                 .numberOfReplicas(0))
-            .put(IndexMetaData.builder("index3")
+            .put(IndexMetadata.builder("index3")
                 .settings(settings(Version.CURRENT)
-                    .put(IndexSettings.INDEX_SOFT_DELETES_SETTING.getKey(), true)
-                    .put(IndexMetaData.SETTING_INDEX_UUID, "index3"))
+                    .put(IndexMetadata.SETTING_INDEX_UUID, "index3"))
                 .numberOfShards(1)
                 .numberOfReplicas(0))
             .build();
@@ -507,14 +757,14 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
 
     public void testCleanFollowedLeaderIndicesNoEntry() {
         AutoFollowMetadata autoFollowMetadata = new AutoFollowMetadata(Collections.emptyMap(),
-            Collections.singletonMap("pattern2", Arrays.asList("index1", "index2", "index3")), Collections.emptyMap());
+            Map.of("pattern2", Arrays.asList("index1", "index2", "index3")), Collections.emptyMap());
         ClusterState clusterState = new ClusterState.Builder(new ClusterName("name"))
-            .metaData(new MetaData.Builder().putCustom(AutoFollowMetadata.TYPE, autoFollowMetadata))
+            .metadata(new Metadata.Builder().putCustom(AutoFollowMetadata.TYPE, autoFollowMetadata))
             .build();
 
-        MetaData remoteMetadata = new MetaData.Builder()
-            .put(IndexMetaData.builder("index1")
-                .settings(settings(Version.CURRENT).put(IndexSettings.INDEX_SOFT_DELETES_SETTING.getKey(), true))
+        Metadata remoteMetadata = new Metadata.Builder()
+            .put(IndexMetadata.builder("index1")
+                .settings(settings(Version.CURRENT))
                 .numberOfShards(1)
                 .numberOfReplicas(0))
             .build();
@@ -525,15 +775,15 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
     }
 
     public void testGetFollowerIndexName() {
-        AutoFollowPattern autoFollowPattern = new AutoFollowPattern("remote", Collections.singletonList("metrics-*"), null, null,
+        AutoFollowPattern autoFollowPattern = new AutoFollowPattern("remote", Collections.singletonList("metrics-*"), null, true, null,
             null, null, null, null, null, null, null, null, null);
         assertThat(AutoFollower.getFollowerIndexName(autoFollowPattern, "metrics-0"), equalTo("metrics-0"));
 
-        autoFollowPattern = new AutoFollowPattern("remote", Collections.singletonList("metrics-*"), "eu-metrics-0", null, null,
+        autoFollowPattern = new AutoFollowPattern("remote", Collections.singletonList("metrics-*"), "eu-metrics-0", true, null, null,
             null, null, null, null, null, null, null, null);
         assertThat(AutoFollower.getFollowerIndexName(autoFollowPattern, "metrics-0"), equalTo("eu-metrics-0"));
 
-        autoFollowPattern = new AutoFollowPattern("remote", Collections.singletonList("metrics-*"), "eu-{{leader_index}}", null,
+        autoFollowPattern = new AutoFollowPattern("remote", Collections.singletonList("metrics-*"), "eu-{{leader_index}}", true, null,
             null, null, null, null, null, null, null, null, null);
         assertThat(AutoFollower.getFollowerIndexName(autoFollowPattern, "metrics-0"), equalTo("eu-metrics-0"));
     }
@@ -569,18 +819,18 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
 
         autoFollowCoordinator.updateStats(Arrays.asList(
             new AutoFollowCoordinator.AutoFollowResult("_alias1",
-                Collections.singletonList(Tuple.tuple(new Index("index1", "_na_"), new RuntimeException("error")))),
+                Collections.singletonList(Tuple.tuple(new Index("index1", "_na_"), new RuntimeException("error-1")))),
             new AutoFollowCoordinator.AutoFollowResult("_alias2",
-                Collections.singletonList(Tuple.tuple(new Index("index2", "_na_"), new RuntimeException("error"))))
+                Collections.singletonList(Tuple.tuple(new Index("index2", "_na_"), new RuntimeException("error-2"))))
         ));
         autoFollowStats = autoFollowCoordinator.getStats();
         assertThat(autoFollowStats.getNumberOfFailedFollowIndices(), equalTo(2L));
         assertThat(autoFollowStats.getNumberOfFailedRemoteClusterStateRequests(), equalTo(1L));
         assertThat(autoFollowStats.getNumberOfSuccessfulFollowIndices(), equalTo(0L));
-        assertThat(autoFollowStats.getRecentAutoFollowErrors().size(), equalTo(3));
-        assertThat(autoFollowStats.getRecentAutoFollowErrors().get("_alias1").v2().getCause().getMessage(), equalTo("error"));
-        assertThat(autoFollowStats.getRecentAutoFollowErrors().get("_alias1:index1").v2().getCause().getMessage(), equalTo("error"));
-        assertThat(autoFollowStats.getRecentAutoFollowErrors().get("_alias2:index2").v2().getCause().getMessage(), equalTo("error"));
+        assertThat(autoFollowStats.getRecentAutoFollowErrors().size(), equalTo(2));
+        assertThat(autoFollowStats.getRecentAutoFollowErrors().get("_alias1"), nullValue());
+        assertThat(autoFollowStats.getRecentAutoFollowErrors().get("_alias1:index1").v2().getCause().getMessage(), equalTo("error-1"));
+        assertThat(autoFollowStats.getRecentAutoFollowErrors().get("_alias2:index2").v2().getCause().getMessage(), equalTo("error-2"));
 
         autoFollowCoordinator.updateStats(Arrays.asList(
             new AutoFollowCoordinator.AutoFollowResult("_alias1",
@@ -592,17 +842,15 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
         assertThat(autoFollowStats.getNumberOfFailedFollowIndices(), equalTo(2L));
         assertThat(autoFollowStats.getNumberOfFailedRemoteClusterStateRequests(), equalTo(1L));
         assertThat(autoFollowStats.getNumberOfSuccessfulFollowIndices(), equalTo(2L));
-        assertThat(autoFollowStats.getRecentAutoFollowErrors().size(), equalTo(3));
-        assertThat(autoFollowStats.getRecentAutoFollowErrors().get("_alias1").v2().getCause().getMessage(), equalTo("error"));
-        assertThat(autoFollowStats.getRecentAutoFollowErrors().get("_alias1:index1").v2().getCause().getMessage(), equalTo("error"));
-        assertThat(autoFollowStats.getRecentAutoFollowErrors().get("_alias2:index2").v2().getCause().getMessage(), equalTo("error"));
+        assertThat(autoFollowStats.getRecentAutoFollowErrors().keySet(), empty());
+
     }
 
     public void testUpdateAutoFollowers() {
         ClusterService clusterService = mockClusterService();
         // Return a cluster state with no patterns so that the auto followers never really execute:
         ClusterState followerState = ClusterState.builder(new ClusterName("remote"))
-            .metaData(MetaData.builder().putCustom(AutoFollowMetadata.TYPE,
+            .metadata(Metadata.builder().putCustom(AutoFollowMetadata.TYPE,
                 new AutoFollowMetadata(Collections.emptyMap(), Collections.emptyMap(), Collections.emptyMap())))
             .build();
         when(clusterService.state()).thenReturn(followerState);
@@ -616,14 +864,14 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
             Runnable::run);
         // Add 3 patterns:
         Map<String, AutoFollowPattern> patterns = new HashMap<>();
-        patterns.put("pattern1", new AutoFollowPattern("remote1", Collections.singletonList("logs-*"), null, null, null,
+        patterns.put("pattern1", new AutoFollowPattern("remote1", Collections.singletonList("logs-*"), null, true, null, null,
             null, null, null, null, null, null, null, null));
-        patterns.put("pattern2", new AutoFollowPattern("remote2", Collections.singletonList("logs-*"), null, null, null,
+        patterns.put("pattern2", new AutoFollowPattern("remote2", Collections.singletonList("logs-*"), null, true, null, null,
             null, null, null, null, null, null, null, null));
-        patterns.put("pattern3", new AutoFollowPattern("remote2", Collections.singletonList("metrics-*"), null, null, null,
+        patterns.put("pattern3", new AutoFollowPattern("remote2", Collections.singletonList("metrics-*"), null, true, null, null,
             null, null, null, null, null, null, null, null));
         ClusterState clusterState = ClusterState.builder(new ClusterName("remote"))
-            .metaData(MetaData.builder().putCustom(AutoFollowMetadata.TYPE,
+            .metadata(Metadata.builder().putCustom(AutoFollowMetadata.TYPE,
                 new AutoFollowMetadata(patterns, Collections.emptyMap(), Collections.emptyMap())))
             .build();
         autoFollowCoordinator.updateAutoFollowers(clusterState);
@@ -638,7 +886,7 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
         patterns.remove("pattern1");
         patterns.remove("pattern3");
         clusterState = ClusterState.builder(new ClusterName("remote"))
-            .metaData(MetaData.builder().putCustom(AutoFollowMetadata.TYPE,
+            .metadata(Metadata.builder().putCustom(AutoFollowMetadata.TYPE,
                 new AutoFollowMetadata(patterns, Collections.emptyMap(), Collections.emptyMap())))
             .build();
         autoFollowCoordinator.updateAutoFollowers(clusterState);
@@ -646,10 +894,10 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
         assertThat(autoFollowCoordinator.getStats().getAutoFollowedClusters().get("remote2"), notNullValue());
         assertThat(removedAutoFollower1.removed, is(true));
         // Add pattern 4:
-        patterns.put("pattern4", new AutoFollowPattern("remote1", Collections.singletonList("metrics-*"), null, null, null,
+        patterns.put("pattern4", new AutoFollowPattern("remote1", Collections.singletonList("metrics-*"), null, true, null, null,
             null, null, null, null, null, null, null, null));
         clusterState = ClusterState.builder(new ClusterName("remote"))
-            .metaData(MetaData.builder().putCustom(AutoFollowMetadata.TYPE,
+            .metadata(Metadata.builder().putCustom(AutoFollowMetadata.TYPE,
                 new AutoFollowMetadata(patterns, Collections.emptyMap(), Collections.emptyMap())))
             .build();
         autoFollowCoordinator.updateAutoFollowers(clusterState);
@@ -666,7 +914,7 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
         patterns.remove("pattern2");
         patterns.remove("pattern4");
         clusterState = ClusterState.builder(new ClusterName("remote"))
-            .metaData(MetaData.builder().putCustom(AutoFollowMetadata.TYPE,
+            .metadata(Metadata.builder().putCustom(AutoFollowMetadata.TYPE,
                 new AutoFollowMetadata(patterns, Collections.emptyMap(), Collections.emptyMap())))
             .build();
         autoFollowCoordinator.updateAutoFollowers(clusterState);
@@ -685,7 +933,7 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
             () -> 1L,
             Runnable::run);
         ClusterState clusterState = ClusterState.builder(new ClusterName("remote"))
-            .metaData(MetaData.builder().putCustom(AutoFollowMetadata.TYPE,
+            .metadata(Metadata.builder().putCustom(AutoFollowMetadata.TYPE,
                 new AutoFollowMetadata(Collections.emptyMap(), Collections.emptyMap(), Collections.emptyMap())))
             .build();
         autoFollowCoordinator.updateAutoFollowers(clusterState);
@@ -706,25 +954,113 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
         assertThat(autoFollowCoordinator.getStats().getAutoFollowedClusters().size(), equalTo(0));
     }
 
+    public void testUpdateAutoFollowersNoActivePatterns() {
+        final ClusterService clusterService = mockClusterService();
+        final AutoFollowCoordinator autoFollowCoordinator = new AutoFollowCoordinator(
+            Settings.EMPTY,
+            null,
+            clusterService,
+            new CcrLicenseChecker(() -> true, () -> false),
+            () -> 1L,
+            () -> 1L,
+            Runnable::run);
+
+        autoFollowCoordinator.updateAutoFollowers(ClusterState.EMPTY_STATE);
+        assertThat(autoFollowCoordinator.getStats().getAutoFollowedClusters().size(), equalTo(0));
+
+        // Add 3 patterns:
+        Map<String, AutoFollowPattern> patterns = new HashMap<>();
+        patterns.put("pattern1", new AutoFollowPattern("remote1", Collections.singletonList("logs-*"), null, true, null, null,
+            null, null, null, null, null, null, null, null));
+        patterns.put("pattern2", new AutoFollowPattern("remote2", Collections.singletonList("logs-*"), null, true, null, null,
+            null, null, null, null, null, null, null, null));
+        patterns.put("pattern3", new AutoFollowPattern("remote2", Collections.singletonList("metrics-*"), null, true, null, null,
+            null, null, null, null, null, null, null, null));
+
+        autoFollowCoordinator.updateAutoFollowers(ClusterState.builder(new ClusterName("remote"))
+            .metadata(Metadata.builder().putCustom(AutoFollowMetadata.TYPE,
+                new AutoFollowMetadata(patterns, Collections.emptyMap(), Collections.emptyMap())))
+            .build());
+        assertThat(autoFollowCoordinator.getStats().getAutoFollowedClusters().size(), equalTo(2));
+        assertThat(autoFollowCoordinator.getStats().getAutoFollowedClusters().get("remote1"), notNullValue());
+        assertThat(autoFollowCoordinator.getStats().getAutoFollowedClusters().get("remote2"), notNullValue());
+
+        AutoFollowCoordinator.AutoFollower removedAutoFollower1 = autoFollowCoordinator.getAutoFollowers().get("remote1");
+        assertThat(removedAutoFollower1.removed, is(false));
+        AutoFollowCoordinator.AutoFollower removedAutoFollower2 = autoFollowCoordinator.getAutoFollowers().get("remote2");
+        assertThat(removedAutoFollower2.removed, is(false));
+
+        // Make pattern 1 and pattern 3 inactive
+        patterns.computeIfPresent("pattern1", (name, pattern) -> new AutoFollowPattern(pattern.getRemoteCluster(),
+            pattern.getLeaderIndexPatterns(), pattern.getFollowIndexPattern(), false, pattern.getMaxReadRequestOperationCount(),
+            pattern.getMaxWriteRequestOperationCount(), pattern.getMaxOutstandingReadRequests(), pattern.getMaxOutstandingWriteRequests(),
+            pattern.getMaxReadRequestSize(), pattern.getMaxWriteRequestSize(), pattern.getMaxWriteBufferCount(),
+            pattern.getMaxWriteBufferSize(), pattern.getMaxRetryDelay(), pattern.getReadPollTimeout()));
+        patterns.computeIfPresent("pattern3", (name, pattern) -> new AutoFollowPattern(pattern.getRemoteCluster(),
+            pattern.getLeaderIndexPatterns(), pattern.getFollowIndexPattern(), false, pattern.getMaxReadRequestOperationCount(),
+            pattern.getMaxWriteRequestOperationCount(), pattern.getMaxOutstandingReadRequests(), pattern.getMaxOutstandingWriteRequests(),
+            pattern.getMaxReadRequestSize(), pattern.getMaxWriteRequestSize(), pattern.getMaxWriteBufferCount(),
+            pattern.getMaxWriteBufferSize(), pattern.getMaxRetryDelay(), pattern.getReadPollTimeout()));
+
+        autoFollowCoordinator.updateAutoFollowers(ClusterState.builder(new ClusterName("remote"))
+            .metadata(Metadata.builder().putCustom(AutoFollowMetadata.TYPE,
+                new AutoFollowMetadata(patterns, Collections.emptyMap(), Collections.emptyMap())))
+            .build());
+        assertThat(autoFollowCoordinator.getStats().getAutoFollowedClusters().size(), equalTo(1));
+        assertThat(autoFollowCoordinator.getStats().getAutoFollowedClusters().get("remote2"), notNullValue());
+        assertThat(removedAutoFollower1.removed, is(true));
+        assertThat(removedAutoFollower2.removed, is(false));
+
+        // Add active pattern 4 and make pattern 2 inactive
+        patterns.put("pattern4", new AutoFollowPattern("remote1", Collections.singletonList("metrics-*"), null, true, null, null,
+            null, null, null, null, null, null, null, null));
+        patterns.computeIfPresent("pattern2", (name, pattern) -> new AutoFollowPattern(pattern.getRemoteCluster(),
+            pattern.getLeaderIndexPatterns(), pattern.getFollowIndexPattern(), false, pattern.getMaxReadRequestOperationCount(),
+            pattern.getMaxWriteRequestOperationCount(), pattern.getMaxOutstandingReadRequests(), pattern.getMaxOutstandingWriteRequests(),
+            pattern.getMaxReadRequestSize(), pattern.getMaxWriteRequestSize(), pattern.getMaxWriteBufferCount(),
+            pattern.getMaxWriteBufferSize(), pattern.getMaxRetryDelay(), pattern.getReadPollTimeout()));
+
+        autoFollowCoordinator.updateAutoFollowers(ClusterState.builder(new ClusterName("remote"))
+            .metadata(Metadata.builder().putCustom(AutoFollowMetadata.TYPE,
+                new AutoFollowMetadata(patterns, Collections.emptyMap(), Collections.emptyMap())))
+            .build());
+        assertThat(autoFollowCoordinator.getStats().getAutoFollowedClusters().size(), equalTo(1));
+        assertThat(autoFollowCoordinator.getStats().getAutoFollowedClusters().get("remote1"), notNullValue());
+
+        AutoFollowCoordinator.AutoFollower removedAutoFollower4 = autoFollowCoordinator.getAutoFollowers().get("remote1");
+        assertThat(removedAutoFollower4.removed, is(false));
+        assertNotSame(removedAutoFollower4, removedAutoFollower1);
+        assertThat(removedAutoFollower2.removed, is(true));
+
+        autoFollowCoordinator.updateAutoFollowers(ClusterState.builder(new ClusterName("remote"))
+            .metadata(Metadata.builder().putCustom(AutoFollowMetadata.TYPE,
+                new AutoFollowMetadata(Collections.emptyMap(), Collections.emptyMap(), Collections.emptyMap())))
+            .build());
+        assertThat(autoFollowCoordinator.getStats().getAutoFollowedClusters().size(), equalTo(0));
+        assertThat(removedAutoFollower1.removed, is(true));
+        assertThat(removedAutoFollower2.removed, is(true));
+        assertThat(removedAutoFollower4.removed, is(true));
+    }
+
     public void testWaitForMetadataVersion() {
         Client client = mock(Client.class);
         when(client.getRemoteClusterClient(anyString())).thenReturn(client);
 
         AutoFollowPattern autoFollowPattern = new AutoFollowPattern("remote", Collections.singletonList("logs-*"),
-            null, null, null, null, null, null, null, null, null, null, null);
+            null, true, null, null, null, null, null, null, null, null, null, null);
         Map<String, AutoFollowPattern> patterns = new HashMap<>();
         patterns.put("remote", autoFollowPattern);
         Map<String, List<String>> followedLeaderIndexUUIDS = new HashMap<>();
         followedLeaderIndexUUIDS.put("remote", new ArrayList<>());
         Map<String, Map<String, String>> autoFollowHeaders = new HashMap<>();
-        autoFollowHeaders.put("remote", Collections.singletonMap("key", "val"));
+        autoFollowHeaders.put("remote", Map.of("key", "val"));
         AutoFollowMetadata autoFollowMetadata = new AutoFollowMetadata(patterns, followedLeaderIndexUUIDS, autoFollowHeaders);
 
         final LinkedList<ClusterState> leaderStates = new LinkedList<>();
         ClusterState[] states = new ClusterState[16];
         for (int i = 0; i < states.length; i++) {
             states[i] = ClusterState.builder(new ClusterName("name"))
-                .metaData(MetaData.builder().putCustom(AutoFollowMetadata.TYPE, autoFollowMetadata))
+                .metadata(Metadata.builder().putCustom(AutoFollowMetadata.TYPE, autoFollowMetadata))
                 .build();
             String indexName = "logs-" + i;
             leaderStates.add(i == 0 ? createRemoteClusterState(indexName, true) :
@@ -763,7 +1099,9 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
         autoFollower.start();
         assertThat(allResults.size(), equalTo(states.length));
         for (int i = 0; i < states.length; i++) {
-            assertThat(allResults.get(i).autoFollowExecutionResults.containsKey(new Index("logs-" + i, "_na_")), is(true));
+            final String indexName = "logs-" + i;
+            assertThat(allResults.get(i).autoFollowExecutionResults.keySet().stream()
+                .anyMatch(index -> index.getName().equals(indexName)), is(true));
         }
     }
 
@@ -772,19 +1110,19 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
         when(client.getRemoteClusterClient(anyString())).thenReturn(client);
 
         AutoFollowPattern autoFollowPattern = new AutoFollowPattern("remote", Collections.singletonList("logs-*"),
-            null, null, null, null, null, null, null, null, null, null, null);
+            null, true, null, null, null, null, null, null, null, null, null, null);
         Map<String, AutoFollowPattern> patterns = new HashMap<>();
         patterns.put("remote", autoFollowPattern);
         Map<String, List<String>> followedLeaderIndexUUIDS = new HashMap<>();
         followedLeaderIndexUUIDS.put("remote", new ArrayList<>());
         Map<String, Map<String, String>> autoFollowHeaders = new HashMap<>();
-        autoFollowHeaders.put("remote", Collections.singletonMap("key", "val"));
+        autoFollowHeaders.put("remote", Map.of("key", "val"));
         AutoFollowMetadata autoFollowMetadata = new AutoFollowMetadata(patterns, followedLeaderIndexUUIDS, autoFollowHeaders);
 
         ClusterState[] states = new ClusterState[16];
         for (int i = 0; i < states.length; i++) {
             states[i] = ClusterState.builder(new ClusterName("name"))
-                .metaData(MetaData.builder().putCustom(AutoFollowMetadata.TYPE, autoFollowMetadata))
+                .metadata(Metadata.builder().putCustom(AutoFollowMetadata.TYPE, autoFollowMetadata))
                 .build();
         }
         Consumer<List<AutoFollowCoordinator.AutoFollowResult>> handler = results -> {
@@ -830,17 +1168,17 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
         ClusterState remoteState = createRemoteClusterState("logs-20190101", false);
 
         AutoFollowPattern autoFollowPattern = new AutoFollowPattern("remote", Collections.singletonList("logs-*"),
-            null, null, null, null, null, null, null, null, null, null, null);
+            null, true, null, null, null, null, null, null, null, null, null, null);
         Map<String, AutoFollowPattern> patterns = new HashMap<>();
         patterns.put("remote", autoFollowPattern);
         Map<String, List<String>> followedLeaderIndexUUIDS = new HashMap<>();
         followedLeaderIndexUUIDS.put("remote", new ArrayList<>());
         Map<String, Map<String, String>> autoFollowHeaders = new HashMap<>();
-        autoFollowHeaders.put("remote", Collections.singletonMap("key", "val"));
+        autoFollowHeaders.put("remote", Map.of("key", "val"));
         AutoFollowMetadata autoFollowMetadata = new AutoFollowMetadata(patterns, followedLeaderIndexUUIDS, autoFollowHeaders);
 
         ClusterState currentState = ClusterState.builder(new ClusterName("name"))
-            .metaData(MetaData.builder().putCustom(AutoFollowMetadata.TYPE, autoFollowMetadata))
+            .metadata(Metadata.builder().putCustom(AutoFollowMetadata.TYPE, autoFollowMetadata))
             .build();
 
         List<AutoFollowCoordinator.AutoFollowResult> results = new ArrayList<>();
@@ -866,7 +1204,7 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
             void updateAutoFollowMetadata(Function<ClusterState, ClusterState> updateFunction,
                                           Consumer<Exception> handler) {
                 ClusterState resultCs = updateFunction.apply(currentState);
-                AutoFollowMetadata result = resultCs.metaData().custom(AutoFollowMetadata.TYPE);
+                AutoFollowMetadata result = resultCs.metadata().custom(AutoFollowMetadata.TYPE);
                 assertThat(result.getFollowedLeaderIndexUUIDs().size(), equalTo(1));
                 assertThat(result.getFollowedLeaderIndexUUIDs().get("remote").size(), equalTo(1));
                 handler.accept(null);
@@ -896,21 +1234,21 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
         ClusterState remoteState = createRemoteClusterState("logs-20190101", true);
 
         AutoFollowPattern autoFollowPattern = new AutoFollowPattern("remote", Collections.singletonList("logs-*"),
-            null, null, null, null, null, null, null, null, null, null, null);
+            null, true, null, null, null, null, null, null, null, null, null, null);
         Map<String, AutoFollowPattern> patterns = new HashMap<>();
         patterns.put("remote", autoFollowPattern);
         Map<String, List<String>> followedLeaderIndexUUIDS = new HashMap<>();
         followedLeaderIndexUUIDS.put("remote", new ArrayList<>());
         Map<String, Map<String, String>> autoFollowHeaders = new HashMap<>();
-        autoFollowHeaders.put("remote", Collections.singletonMap("key", "val"));
+        autoFollowHeaders.put("remote", Map.of("key", "val"));
         AutoFollowMetadata autoFollowMetadata = new AutoFollowMetadata(patterns, followedLeaderIndexUUIDS, autoFollowHeaders);
 
         ClusterState currentState = ClusterState.builder(new ClusterName("name"))
-            .metaData(MetaData.builder()
-                .put(IndexMetaData.builder("logs-20190101")
-                    .settings(settings(Version.CURRENT).put(IndexSettings.INDEX_SOFT_DELETES_SETTING.getKey(), true))
-                    .putCustom(Ccr.CCR_CUSTOM_METADATA_KEY, Collections.singletonMap(Ccr.CCR_CUSTOM_METADATA_LEADER_INDEX_UUID_KEY,
-                        remoteState.metaData().index("logs-20190101").getIndexUUID()))
+            .metadata(Metadata.builder()
+                .put(IndexMetadata.builder("logs-20190101")
+                    .settings(settings(Version.CURRENT))
+                    .putCustom(Ccr.CCR_CUSTOM_METADATA_KEY, Map.of(Ccr.CCR_CUSTOM_METADATA_LEADER_INDEX_UUID_KEY,
+                        remoteState.metadata().index("logs-20190101").getIndexUUID()))
                     .numberOfShards(1)
                     .numberOfReplicas(0))
                 .putCustom(AutoFollowMetadata.TYPE, autoFollowMetadata))
@@ -942,7 +1280,7 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
             void updateAutoFollowMetadata(Function<ClusterState, ClusterState> updateFunction,
                                           Consumer<Exception> handler) {
                 ClusterState resultCs = updateFunction.apply(currentState);
-                AutoFollowMetadata result = resultCs.metaData().custom(AutoFollowMetadata.TYPE);
+                AutoFollowMetadata result = resultCs.metadata().custom(AutoFollowMetadata.TYPE);
                 assertThat(result.getFollowedLeaderIndexUUIDs().size(), equalTo(1));
                 assertThat(result.getFollowedLeaderIndexUUIDs().get("remote").size(), equalTo(1));
                 handler.accept(null);
@@ -976,13 +1314,13 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
      */
     public void testRepeatedFailures() throws InterruptedException {
         final ClusterState clusterState = mock(ClusterState.class);
-        final MetaData metaData = mock(MetaData.class);
-        when(clusterState.metaData()).thenReturn(metaData);
+        final Metadata metadata = mock(Metadata.class);
+        when(clusterState.metadata()).thenReturn(metadata);
         final AutoFollowPattern pattern = new AutoFollowPattern(
             "remote",
             List.of("*"),
             "{}",
-            0,
+            true, 0,
             0,
             0,
             0,
@@ -993,7 +1331,7 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
             TimeValue.ZERO,
             TimeValue.ZERO);
         final AutoFollowMetadata autoFollowMetadata = new AutoFollowMetadata(Map.of("remote", pattern), Map.of(), Map.of());
-        when(metaData.custom(AutoFollowMetadata.TYPE)).thenReturn(autoFollowMetadata);
+        when(metadata.custom(AutoFollowMetadata.TYPE)).thenReturn(autoFollowMetadata);
 
         final int iterations = randomIntBetween(16384, 32768); // sufficiently large to exercise that we do not stack overflow
         final AtomicInteger counter = new AtomicInteger();
@@ -1045,50 +1383,146 @@ public class AutoFollowCoordinatorTests extends ESTestCase {
         }
     }
 
-    private static ClusterState createRemoteClusterState(String indexName, boolean enableSoftDeletes) {
-        Settings.Builder indexSettings;
-        indexSettings = settings(Version.CURRENT).put(IndexSettings.INDEX_SOFT_DELETES_SETTING.getKey(), enableSoftDeletes);
+    public void testClosedIndicesAreNotAutoFollowed() {
+        final Client client = mock(Client.class);
+        when(client.getRemoteClusterClient(anyString())).thenReturn(client);
 
-        IndexMetaData indexMetaData = IndexMetaData.builder(indexName)
+        final String pattern = "pattern1";
+        final ClusterState localState = ClusterState.builder(new ClusterName("local"))
+            .metadata(Metadata.builder()
+                .putCustom(AutoFollowMetadata.TYPE,
+                    new AutoFollowMetadata(Map.of(pattern, new AutoFollowPattern("remote", List.of("docs-*"), null, true,
+                        null, null, null, null, null, null, null, null, null, null)),
+                        Map.of(pattern, List.of()), Map.of(pattern, Map.of()))))
+            .build();
+
+        ClusterState remoteState = null;
+        final int nbLeaderIndices = randomIntBetween(1, 15);
+        for (int i = 0; i < nbLeaderIndices; i++) {
+            String indexName = "docs-" + i;
+            if (remoteState == null) {
+                remoteState = createRemoteClusterState(indexName, true);
+            } else {
+                remoteState = createRemoteClusterState(remoteState, indexName);
+            }
+            if (randomBoolean()) {
+                // randomly close the index
+                remoteState = ClusterState.builder(remoteState.getClusterName())
+                    .routingTable(remoteState.routingTable())
+                    .metadata(Metadata.builder(remoteState.metadata())
+                        .put(IndexMetadata.builder(remoteState.metadata().index(indexName)).state(IndexMetadata.State.CLOSE).build(), true)
+                        .build())
+                    .build();
+            }
+        }
+
+        final ClusterState finalRemoteState = remoteState;
+        final AtomicReference<ClusterState> lastModifiedClusterState = new AtomicReference<>(localState);
+        final List<AutoFollowCoordinator.AutoFollowResult> results = new ArrayList<>();
+        final Set<Object> followedIndices = ConcurrentCollections.newConcurrentSet();
+        final AutoFollower autoFollower =
+            new AutoFollower("remote", results::addAll, localClusterStateSupplier(localState), () -> 1L, Runnable::run) {
+                @Override
+                void getRemoteClusterState(String remoteCluster,
+                                           long metadataVersion,
+                                           BiConsumer<ClusterStateResponse, Exception> handler) {
+                    assertThat(remoteCluster, equalTo("remote"));
+                    handler.accept(new ClusterStateResponse(new ClusterName("remote"), finalRemoteState, false), null);
+                }
+
+                @Override
+                void createAndFollow(Map<String, String> headers,
+                                     PutFollowAction.Request followRequest,
+                                     Runnable successHandler,
+                                     Consumer<Exception> failureHandler) {
+                    followedIndices.add(followRequest.getLeaderIndex());
+                    successHandler.run();
+                }
+
+                @Override
+                void updateAutoFollowMetadata(Function<ClusterState, ClusterState> updateFunction, Consumer<Exception> handler) {
+                    lastModifiedClusterState.updateAndGet(updateFunction::apply);
+                    handler.accept(null);
+                }
+
+                @Override
+                void cleanFollowedRemoteIndices(ClusterState remoteClusterState, List<String> patterns) {
+                    // Ignore, to avoid invoking updateAutoFollowMetadata(...) twice
+                }
+            };
+        autoFollower.start();
+
+        assertThat(results, notNullValue());
+        assertThat(results.size(), equalTo(1));
+
+        for (ObjectObjectCursor<String, IndexMetadata> index : remoteState.metadata().indices()) {
+            boolean expect = index.value.getState() == IndexMetadata.State.OPEN;
+            assertThat(results.get(0).autoFollowExecutionResults.containsKey(index.value.getIndex()), is(expect));
+            assertThat(followedIndices.contains(index.key), is(expect));
+        }
+    }
+
+    private static ClusterState createRemoteClusterState(String indexName, boolean enableSoftDeletes) {
+        return createRemoteClusterState(indexName, enableSoftDeletes, 0L);
+    }
+
+    private static ClusterState createRemoteClusterState(String indexName, boolean enableSoftDeletes, long metadataVersion) {
+        Settings.Builder indexSettings;
+        if (enableSoftDeletes == false) {
+            indexSettings = settings(VersionUtils.randomPreviousCompatibleVersion(random(), Version.V_8_0_0))
+                .put(IndexSettings.INDEX_SOFT_DELETES_SETTING.getKey(), false);
+        } else {
+            indexSettings = settings(Version.CURRENT);
+        }
+        indexSettings.put(IndexMetadata.SETTING_INDEX_UUID, UUIDs.randomBase64UUID(random()));
+
+        IndexMetadata indexMetadata = IndexMetadata.builder(indexName)
             .settings(indexSettings)
             .numberOfShards(1)
             .numberOfReplicas(0)
             .build();
         ClusterState.Builder csBuilder = ClusterState.builder(new ClusterName("remote"))
-            .metaData(MetaData.builder().put(indexMetaData, true));
+            .metadata(Metadata.builder()
+                .put(indexMetadata, true)
+                .version(metadataVersion));
 
         ShardRouting shardRouting =
             TestShardRouting.newShardRouting(indexName, 0, "1", true, ShardRoutingState.INITIALIZING).moveToStarted();
-        IndexRoutingTable indexRoutingTable = IndexRoutingTable.builder(indexMetaData.getIndex()).addShard(shardRouting).build();
+        IndexRoutingTable indexRoutingTable = IndexRoutingTable.builder(indexMetadata.getIndex()).addShard(shardRouting).build();
         csBuilder.routingTable(RoutingTable.builder().add(indexRoutingTable).build()).build();
 
         return csBuilder.build();
     }
 
-    private static ClusterState createRemoteClusterState(ClusterState previous, String indexName) {
-        IndexMetaData indexMetaData = IndexMetaData.builder(indexName)
-            .settings(settings(Version.CURRENT).put(IndexSettings.INDEX_SOFT_DELETES_SETTING.getKey(), true))
-            .numberOfShards(1)
-            .numberOfReplicas(0)
+    private static ClusterState createRemoteClusterState(final ClusterState previous, final String... indices) {
+        if (indices == null) {
+            return previous;
+        }
+        final Metadata.Builder metadataBuilder = Metadata.builder(previous.metadata()).version(previous.metadata().version() + 1);
+        final RoutingTable.Builder routingTableBuilder = RoutingTable.builder(previous.routingTable());
+        for (String indexName : indices) {
+            IndexMetadata indexMetadata = IndexMetadata.builder(indexName)
+                .settings(settings(Version.CURRENT)
+                    .put(IndexMetadata.SETTING_INDEX_UUID, UUIDs.randomBase64UUID(random())))
+                .numberOfShards(1)
+                .numberOfReplicas(0)
+                .build();
+            metadataBuilder.put(indexMetadata, true);
+            routingTableBuilder.add(IndexRoutingTable.builder(indexMetadata.getIndex())
+                .addShard(TestShardRouting.newShardRouting(indexName, 0, "1", true, ShardRoutingState.INITIALIZING).moveToStarted())
+                .build());
+        }
+        return ClusterState.builder(previous.getClusterName())
+            .metadata(metadataBuilder.build())
+            .routingTable(routingTableBuilder.build())
             .build();
-        ClusterState.Builder csBuilder = ClusterState.builder(new ClusterName("remote"))
-            .metaData(MetaData.builder(previous.metaData())
-                .version(previous.metaData().version() + 1)
-                .put(indexMetaData, true));
-
-        ShardRouting shardRouting =
-            TestShardRouting.newShardRouting(indexName, 0, "1", true, ShardRoutingState.INITIALIZING).moveToStarted();
-        IndexRoutingTable indexRoutingTable = IndexRoutingTable.builder(indexMetaData.getIndex()).addShard(shardRouting).build();
-        csBuilder.routingTable(RoutingTable.builder().add(indexRoutingTable).build()).build();
-
-        return csBuilder.build();
     }
 
     private static Supplier<ClusterState> localClusterStateSupplier(ClusterState... states) {
         final AutoFollowMetadata emptyAutoFollowMetadata =
             new AutoFollowMetadata(Collections.emptyMap(), Collections.emptyMap(), Collections.emptyMap());
         final ClusterState lastState = ClusterState.builder(new ClusterName("remote"))
-            .metaData(MetaData.builder().putCustom(AutoFollowMetadata.TYPE, emptyAutoFollowMetadata))
+            .metadata(Metadata.builder().putCustom(AutoFollowMetadata.TYPE, emptyAutoFollowMetadata))
             .build();
         final LinkedList<ClusterState> queue = new LinkedList<>(Arrays.asList(states));
         return () -> {
